@@ -21,6 +21,7 @@
 #define SWITCHYARD_MAX_SLOTS 8
 #define SWITCHYARD_MAX_CHANNELS 2
 #define SWITCHYARD_PROTOCOL_VERSION "1.1"
+#define SWITCHYARD_CACHE_DIR "/var/cache/aoip"
 #define SWITCHYARD_ROUTING_FILE "/var/cache/aoip/routing.db"
 #define SWITCHYARD_SOURCES_FILE "/var/cache/aoip/sources.db"
 #define SWITCHYARD_RTP_PORT 5004
