@@ -96,3 +96,5 @@
 	correctly.
 2014-07-08 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.6.2.
+2014-07-10 Fred Gleason <fredg@paravelsystems.com>
+	* Added code to create the cache directory automatically.
